добавляет иконку в раздел преимущество

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --primary-bg-color: #ffffff;
   --button-bg-color: #f5f4fa;
   --hero-bg-color: #2f303a;
+  --feature-bgc-color: #F5F4FA;
 }
 
 *,
@@ -72,6 +73,20 @@ a {
 }
 
 /* Main nav */
+
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  margin-right: auto;
+  margin-left: auto;
+  outline: 1px solid black;
+  background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),
+  url(../images/background.jpg);
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 
 .main-nav {
   display: flex;
@@ -177,8 +192,6 @@ line-height: 1.14px;
 
 .hero {
 text-align: center;
-padding-top: 200px;
-padding-bottom: 200px;
 background-color: var(--hero-bg-color);
 }
 
@@ -192,7 +205,8 @@ letter-spacing: 0.06em;
 text-transform: uppercase;
 
 width: 696px;
-padding-left: 237px;
+padding-top: 200px;
+padding-left: 452px;
 margin-top: 0px;
 margin-bottom: 30px;
 }
@@ -215,6 +229,29 @@ letter-spacing: 0.03em;
 .feature {
 padding-bottom: 0;
 }
+
+.list-item {
+  width: 270px;
+
+}
+
+.list-item::before {
+  content:"";
+  display: block;
+  height: 120px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color:var(--feature-bgc-color); 
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.icon-antena::before{
+  background-image: url(../images/antenna.svg);
+  background-size: 70px;
+}
+
 
 .aboutus {
 background-color: var(--button-bg-color);
@@ -479,6 +516,9 @@ margin-bottom: 34px;
 
 .element {
   padding:20px 24px 20px 24px;
+
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .flex-element {
