--- a/css/styles.css
+++ b/css/styles.css
@@ -142,8 +142,30 @@ color: var(--accent-color);
 
 /* Contact */
 
+.contact-top .item::before{
+  content: "";
+  align-items: center;
+  width: 16px;
+  margin-right: 10px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.item.icon-envelope::before {
+  background-image: url(../icon/envelope.svg);
+  background-size: 16px 12px  ;
+}
+
+.item.icon-smartphone::before {
+  background-image: url(../icon/smartphone.svg);
+  background-size: 10px 16px ;
+}
+
+.contact-top > li {
+  display: inline-flex;
+}
+
 .contact-top {
-  display: flex;
   margin-left: auto;
 }
 
@@ -160,7 +182,6 @@ font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-  
 }
 
 .contact-nav .item + .item {
@@ -181,13 +202,11 @@ line-height: 1.14;
 letter-spacing: 0.02em;
 
 padding-top: 32px;
-padding-bottom: 30px;
+padding-bottom: 32px;
 }
 .contact-top .contact:hover,
-.contact-top .contact:focus {
+.contact-top .contact:focus { 
 color: var(--accent-color);
-font-size: 14px;
-line-height: 1.14px;
 }
 
 .hero {
@@ -230,9 +249,8 @@ letter-spacing: 0.03em;
 padding-bottom: 0;
 }
 
-.list-item {
-  width: 270px;
-
+.feature-list .list-item + .list-item {
+  margin-left: 30px;
 }
 
 .list-item::before {
@@ -243,12 +261,27 @@ padding-bottom: 0;
   background-repeat: no-repeat;
   background-position: center;
   background-color:var(--feature-bgc-color); 
-  margin-right: 30px;
   margin-bottom: 30px;
 }
 
 .icon-antena::before{
-  background-image: url(../images/antenna.svg);
+  background-image: url(../images/antena.svg);
+  background-size: 70px;
+}
+
+.icon-clock::before{
+  background-image: url(../images/clock.svg);
+  background-size: 70px;
+}
+
+
+.icon-vector::before {
+  background-image: url(../images/Vector.svg);
+  background-size: 70px;
+}
+
+.icon-astronaut::before {
+  background-image: url(../images/astronaut.svg);
   background-size: 70px;
 }
 
@@ -511,7 +544,7 @@ margin-bottom: 34px;
   border-left: 1px solid #EEEEEE;
   border-right: 1px solid #EEEEEE;
   border-bottom: 1px solid #EEEEEE;
-  padding:20px 24px 20px 24px; 
+  padding:20px 24px; 
 }
 
 .element {
