--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --button-bg-color: #f5f4fa;
   --hero-bg-color: #2f303a;
   --feature-bgc-color: #F5F4FA;
+  --icon-noAction-color: #AFB1B8;
 }
 
 *,
@@ -142,7 +143,7 @@ color: var(--accent-color);
 
 /* Contact */
 
-.contact-top .item::before{
+/* .contact-top .item::before{
   content: "";
   align-items: center;
   width: 16px;
@@ -159,7 +160,7 @@ color: var(--accent-color);
 .item.icon-smartphone::before {
   background-image: url(../icon/smartphone.svg);
   background-size: 10px 16px ;
-}
+} */
 
 .contact-top > li {
   display: inline-flex;
@@ -253,7 +254,7 @@ padding-bottom: 0;
   margin-left: 30px;
 }
 
-.list-item::before {
+/* .list-item::before {
   content:"";
   display: block;
   height: 120px;
@@ -283,7 +284,7 @@ padding-bottom: 0;
 .icon-astronaut::before {
   background-image: url(../images/astronaut.svg);
   background-size: 70px;
-}
+} */
 
 
 .aboutus {
@@ -387,9 +388,38 @@ img {
   line-height: 1.2;
 
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 16px;
   
 }
+
+/* Кнопки соц. сетей */
+
+.social {
+  cursor: pointer;
+  padding: 0;
+  border: none;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: var(--icon-noAction-color);
+  background-color: var(--primary-bg-color);
+
+}
+
+.social:hover,
+.social:focus {
+  color: var(--primary-bg-color);
+  background-color: var(--accent-color);
+}
+
+.social-icon {
+  fill: currentColor;
+}
+
+.element .social + .social {
+  margin-left: 10px;
+}
+
 
 /* Logo */
 
