--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,10 @@ color: var(--primary-text-color);
 }
 
 .icon {
-  fill: currentColor;
+  fill: currentColor; 
+}
+
+.social-top .icon {
   padding-right: 10px;
 }
 
@@ -228,6 +231,8 @@ color: var(--primary-text-color);
   color: var(--accent-color);
   background-color: var(--primary-bg-color);
 }
+
+
 
 /* Hero */
 
@@ -267,8 +272,10 @@ text-align: center;
 letter-spacing: 0.03em;
 }
 
-.feature {
-padding-bottom: 0;
+.feature-icon {
+border: none;
+padding: 25px 100px;
+margin-bottom: 30px;
 }
 
 .feature-list .list-item + .list-item {
@@ -349,6 +356,10 @@ margin-bottom: 0;
 }
 
 /* Features */
+
+.feature {
+  padding-bottom: 0;
+}
 
 .feature-list {
 display: flex;
@@ -432,7 +443,7 @@ img {
 .social:focus {
   color: var(--primary-bg-color);
   background-color: var(--accent-color);
-box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);  
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .social-icon {
@@ -443,6 +454,29 @@ box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 
   margin-left: 10px;
 }
 
+/* Постоянные клиенты  */
+
+.contact-icon {
+  border-radius: 4%;
+  width: 170px;
+  height: 92px;
+  padding: 0;
+  color: var(--icon-noAction-color);
+  background-color: var(--primary-bg-color);
+  border: 1px solid var(--icon-noAction-color);
+}
+
+.contact-icon:hover,
+.contact-icon:focus {
+  color: var(--accent-color);
+  background-color: var(--primary-bg-color);
+  border: 1px solid rgba(33, 150, 243, 1);
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.contact-icon {
+  fill: currentColor;
+}
 
 /* Logo */
 
