--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,9 @@
   --primary-bg-color: #ffffff;
   --button-bg-color: #f5f4fa;
   --hero-bg-color: #2f303a;
-  --feature-bgc-color: #F5F4FA;
-  --icon-noAction-color: #AFB1B8;
+  --feature-bgc-color: #f5f4fa;
+  --icon-noAction-color: #afb1b8;
+  --bgc-icon-footer: rgba(255, 255, 255, 0.1);
 }
 
 *,
@@ -51,7 +52,7 @@ a {
 }
 
 .page-header {
-  border-bottom: 1px solid #EEEEEE  ;
+  border-bottom: 1px solid #eeeeee;
 }
 
 /* Logo */
@@ -81,8 +82,12 @@ a {
   margin-right: auto;
   margin-left: auto;
   outline: 1px solid black;
-  background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)),
-  url(../images/background.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/background.jpg);
 
   background-repeat: no-repeat;
   background-position: center;
@@ -112,33 +117,33 @@ a {
 }
 
 .site-nav .link {
-display: block;
-color: var(--title-text-color);
+  display: block;
+  color: var(--title-text-color);
 
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 
-padding-top: 32px;
-padding-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .site-nav .page {
-display: block;
+  display: block;
 
-color: var(--accent-color);
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 
-padding-top: 32px;
-padding-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus {
-color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Contact */
@@ -162,41 +167,39 @@ color: var(--accent-color);
   background-size: 10px 16px ;
 } */
 
-
-
 .contact-nav .contact {
-color: var(--primary-text-color);
-background-color: var(--hero-bg-color);
+  color: var(--primary-text-color);
+  background-color: var(--hero-bg-color);
 
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 1.71;
-letter-spacing: 0.03em;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .contact-nav .item + .item {
-margin-top: 9px;
+  margin-top: 9px;
 }
 
 .contact-nav .contact:hover,
 .contact-nav .contact:focus {
-color: var(--primary-bg-color);
+  color: var(--primary-bg-color);
 }
 
 .contact-top .contact {
-color: var(--primary-text-color);
-background-color: var(--primary-bg-color);
-font-weight: 500;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.02em;
+  color: var(--primary-text-color);
+  background-color: var(--primary-bg-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 
-padding-top: 32px;
-padding-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
-.contact-top>li {
+.contact-top > li {
   display: inline-flex;
 }
 
@@ -204,21 +207,21 @@ padding-bottom: 32px;
   margin-left: auto;
 }
 
-.contact-top .item+.item {
+.contact-top .item + .item {
   margin-left: 50px;
 }
 
 .social-top {
-display: inline-flex;
-align-items: center;
-cursor: pointer;
-border: none;
-background-color: var(--primary-bg-color);
-color: var(--primary-text-color);
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  border: none;
+  background-color: var(--primary-bg-color);
+  color: var(--primary-text-color);
 }
 
 .icon {
-  fill: currentColor; 
+  fill: currentColor;
 }
 
 .social-top .icon {
@@ -232,50 +235,52 @@ color: var(--primary-text-color);
   background-color: var(--primary-bg-color);
 }
 
-
+.join-list .social + .social {
+  margin-left: 10px;
+}
 
 /* Hero */
 
 .hero {
-text-align: center;
-background-color: var(--hero-bg-color);
+  text-align: center;
+  background-color: var(--hero-bg-color);
 }
 
 .hero-title {
-color: var(--primary-bg-color);
-font-weight: 900;
-font-size: 44px;
-line-height: 1.3;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
+  color: var(--primary-bg-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
 
-width: 696px;
-padding-top: 200px;
-padding-left: 452px;
-margin-top: 0px;
-margin-bottom: 30px;
+  width: 696px;
+  padding-top: 200px;
+  padding-left: 452px;
+  margin-top: 0px;
+  margin-bottom: 30px;
 }
 
 /* Section */
 
 .section-team {
-margin-top: 0;
-margin-bottom: 50px;
+  margin-top: 0;
+  margin-bottom: 50px;
 
-color: var(--title-text-color);
-font-style: normal;
-font-weight: 700;
-font-size: 36px;
-line-height: 1.16;
-text-align: center;
-letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .feature-icon {
-border: none;
-padding: 25px 100px;
-margin-bottom: 30px;
+  border: none;
+  padding: 25px 100px;
+  margin-bottom: 30px;
 }
 
 .feature-list .list-item + .list-item {
@@ -314,45 +319,44 @@ margin-bottom: 30px;
   background-size: 70px;
 } */
 
-
 .aboutus {
-background-color: var(--button-bg-color);
+  background-color: var(--button-bg-color);
 }
 
 .team {
-color: var(--title-text-color);
-font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 1.7;
-letter-spacing: 0.06em;
+  color: var(--title-text-color);
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.7;
+  letter-spacing: 0.06em;
 
-margin-top: 0;
-margin-bottom: 10px;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .description {
-color: var(--title-text-color);
-  
-font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 1.7;
-letter-spacing: 0.06em;
+  color: var(--title-text-color);
 
-margin-bottom: 4px;
-margin-top: 0;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.7;
+  letter-spacing: 0.06em;
+
+  margin-bottom: 4px;
+  margin-top: 0;
 }
 
 .project {
-color: var(--primary-text-color);
-letter-spacing: 0.03em;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.2;
+  color: var(--primary-text-color);
+  letter-spacing: 0.03em;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
 
-margin-top: 0;
-margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 /* Features */
@@ -362,16 +366,14 @@ margin-bottom: 0;
 }
 
 .feature-list {
-display: flex;
+  display: flex;
 }
 
 .feature-list > .item {
-width: 270px;
- 
+  width: 270px;
+
   /* background-color: tomato;*/
 }
-
-
 
 .flex-cont .item + .item {
   margin-left: 30px;
@@ -381,9 +383,7 @@ width: 270px;
   margin-left: 30px;
 } */
 
-
 .section-title {
-
   margin-bottom: 10px;
   margin-top: 0px;
 
@@ -421,9 +421,7 @@ img {
 
   margin-top: 0;
   margin-bottom: 16px;
-  
 }
-
 
 /* Кнопки соц. сетей */
 
@@ -436,14 +434,31 @@ img {
   border-radius: 50%;
   color: var(--icon-noAction-color);
   background-color: var(--primary-bg-color);
+}
 
+.flex-footer {
+  display: flex;
+}
+
+.join {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-bg-color);
+  padding-bottom: 20px;
+}
+
+.join-list {
+  padding-left: 70px;
 }
 
 .social:hover,
 .social:focus {
   color: var(--primary-bg-color);
   background-color: var(--accent-color);
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .social-icon {
@@ -457,6 +472,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 /* Постоянные клиенты  */
 
 .contact-icon {
+  cursor: pointer;
   border-radius: 4%;
   width: 170px;
   height: 92px;
@@ -471,11 +487,33 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   color: var(--accent-color);
   background-color: var(--primary-bg-color);
   border: 1px solid rgba(33, 150, 243, 1);
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .contact-icon {
   fill: currentColor;
+}
+
+.social-botom {
+  cursor: pointer;
+  padding: 0;
+  border: none;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: var(--primary-bg-color);
+  background-color: var(--bgc-icon-footer);
+}
+
+.social-botom:hover,
+.social-botom:focus {
+  color: var(--primary-bg-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.join-list .social-botom + .social-botom {
+  margin-left: 10px;
 }
 
 /* Logo */
@@ -489,7 +527,6 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   letter-spacing: 0.03em;
 }
 
-
 .logo-ft .logo-footer {
   color: var(--primary-bg-color);
 
@@ -498,8 +535,6 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   line-height: 0.83;
   letter-spacing: 0.03em;
 }
-
-
 
 footer {
   background-color: var(--hero-bg-color);
@@ -514,7 +549,7 @@ footer {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-  
+
   margin-bottom: 9px;
 }
 
@@ -549,20 +584,17 @@ footer {
 
   padding: 6px 22px;
   margin-left: 8px;
-
 }
 
 .portfolio-filter {
-display: flex;
-justify-content: center;
+  display: flex;
+  justify-content: center;
 
-margin-top: 0;
-margin-bottom: 34px;
+  margin-top: 0;
+  margin-bottom: 34px;
 }
 
-
 /* Button */
-
 
 .button-first {
   cursor: pointer;
@@ -628,24 +660,25 @@ margin-bottom: 34px;
 }
 
 .element-border {
-  border-left: 1px solid #EEEEEE;
-  border-right: 1px solid #EEEEEE;
-  border-bottom: 1px solid #EEEEEE;
-  padding:20px 24px; 
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  padding: 20px 24px;
 }
 
 .element {
-  padding:20px 24px 20px 24px;
+  padding: 20px 24px 20px 24px;
 
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .flex-element {
   /* width: calc(100% - 40px) / 3; */
   margin-right: 30px;
   margin-bottom: 30px;
-}   
+}
 
 .flex-cont {
   display: flex;
