--- a/css/styles.css
+++ b/css/styles.css
@@ -188,32 +188,27 @@ a {
 
 .contact-top {
   margin-left: auto;
+  display: flex;
 }
 
 .contact-top .item + .item {
   margin-left: 50px;
 }
 
-.social-top {
-  display: inline-flex;
-  align-items: center;
-  cursor: pointer;
-  border: none;
-  background-color: var(--primary-bg-color);
-  color: var(--primary-text-color);
-}
-
 .icon {
   fill: currentColor;
 }
 
-.social-top .icon {
+.item .icon {
   padding-right: 10px;
 }
 
-.social-top:hover,
-.social-top .contact:hover,
-.social-top:focus {
+/* .contact-top.contact {
+  display: flex;
+} */
+
+.contact-top .contact:hover,
+.contact-top .contact:focus {
   color: var(--accent-color);
   background-color: var(--primary-bg-color);
 }
@@ -351,7 +346,7 @@ a {
   letter-spacing: 0.03em;
   font-weight: 400;
   font-size: 16px;
-  line-height: 1.2;
+  line-height: 1.6;
 
   margin-top: 0;
   margin-bottom: 0;
@@ -453,6 +448,7 @@ img {
 
 .join-list {
   padding-left: 70px;
+  display: inline-block;
 }
 
 .social:hover,
@@ -475,7 +471,10 @@ img {
 /* Постоянные клиенты  */
 
 .contact-icon {
+  display: flex;
   cursor: pointer;
+  align-items: center;
+  justify-content: center;
   border-radius: 4%;
   width: 170px;
   height: 92px;
@@ -490,7 +489,6 @@ img {
   color: var(--accent-color);
   background-color: var(--primary-bg-color);
   border: 1px solid rgba(33, 150, 243, 1);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .contact-icon {
@@ -498,7 +496,10 @@ img {
 }
 
 .social-botom {
+  display: inline-flex;
   cursor: pointer;
+  align-items: center;
+  justify-content: center;
   padding: 0;
   border: none;
   width: 44px;
