--- a/css/styles.css
+++ b/css/styles.css
@@ -34,12 +34,10 @@ ul {
 }
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
+  margin: 0 auto;
+  width: 1170px;
+  padding: 0 15px;
   /* outline: 2px solid tomato; */
-  padding-left: 15px;
-  padding-right: 15px;
 }
 
 .section {
@@ -271,9 +269,16 @@ a {
 }
 
 .feature-icon {
+  display: flex;
   border: none;
-  padding: 25px 100px;
   margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  border-radius: 4px;
+  background-color: var(--button-bg-color);
 }
 
 .feature-list .list-item + .list-item {
@@ -595,7 +600,7 @@ footer {
   justify-content: center;
 
   margin-top: 0;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 
 /* Button */
@@ -676,7 +681,7 @@ footer {
 }
 
 .flex-element {
-  /* width: calc(100% - 40px) / 3; */
+  width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
