--- a/css/styles.css
+++ b/css/styles.css
@@ -175,16 +175,21 @@ a {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
 }
 
 .contact-top > li {
   display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .contact-top {
+  display: flex;
   margin-left: auto;
 }
 
@@ -198,6 +203,8 @@ a {
 
 .item .icon {
   padding-right: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
 /* .contact-top.contact {
@@ -273,7 +280,6 @@ a {
   margin-bottom: 30px;
   justify-content: center;
   align-items: center;
-  width: 270px;
   height: 120px;
   margin-bottom: 30px;
   border-radius: 4px;
@@ -517,7 +523,6 @@ img {
 .social-botom:focus {
   color: var(--primary-bg-color);
   background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .join-list .social-botom + .social-botom {
@@ -685,7 +690,11 @@ footer {
   margin-bottom: 30px;
 }
 
-.flex-element:hover {
+.card {
+  display: block;
+}
+
+.card:hover {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
